--- a/src/component/TableManagement/TableManagement.scss
+++ b/src/component/TableManagement/TableManagement.scss
@@ -78,6 +78,10 @@
   line-height: 12px;
 }
 
+.Toastify {
+  z-index: 5;
+}
+
 .Toastify__toast--default {
   font-family: "Fontin";
   font-weight: 900;
